--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,7 +1,9 @@
 # The url to start
 tt.baseurl=http://google.de/
 
+# Selenium environment
+#tt.selenium.server.url=http://[selenium-host]:[port]
 tt.webdriver.mode=local
+
 tt.browser=chrome
 tt.display.resolution=1920x1200
-tt.element.timeout.seconds=5
