Implemented input cpm

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -5,5 +5,8 @@ tt.baseurl=http://google.de/
 #tt.selenium.server.url=http://[selenium-host]:[port]
 tt.webdriver.mode=local
 
+# Type very slow
+tt.user.input.cpm=10
+
 tt.browser=chrome
 tt.display.resolution=1920x1200
