--- a/google-search/build.gradle
+++ b/google-search/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    implementation 'eu.tsystems.mms.tic.testerra:driver-ui-desktop:1-SNAPSHOT'
+    implementation group: 'eu.tsystems.mms.tic.testerra', name: 'driver-ui-desktop', version: testerraVersion
 }
