Renamed google-search to page-objects

--- a/inject-factories/build.gradle
+++ b/inject-factories/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile project(':google-search')
+    compile project(':page-objects')
     implementation group: 'eu.tsystems.mms.tic.testerra', name: 'driver-ui-desktop', version: testerraVersion
 }
