: Adde dinitial project setup.

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,7 +1,14 @@
 tt.browser=chrome
 
-tt.baseurl=http://example.org
+tt.baseurl=https://the-internet.herokuapp.com/
 
 tt.webdriver.mode=remote
 tt.selenium.server.host=localhost
 tt.selenium.server.port=4444
+
+tt.failure.corridor.active=true
+tt.failure.corridor.allowed.failed.tests=2
+
+
+user.language=en
+user.country=EN
