--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Its highly recommended to normalize your project to Unicode -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- Enable localization -->
+        <user.language>en</user.language>
+        <user.country>EN</user.country>
+        <argLine>-Duser.language=${user.language} -Duser.country=${user.country}</argLine>
     </properties>
 
     <dependencies>
