: Updated documentation and annotations according to review

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,14 +1,16 @@
 tt.browser=chrome
-
 tt.baseurl=https://the-internet.herokuapp.com/
 
-tt.webdriver.mode=remote
-tt.selenium.server.host=localhost
-tt.selenium.server.port=4444
+# Set this to remote for remote execution
+tt.webdriver.mode=local
+# Enable this options for remote execution
+#tt.selenium.server.host=localhost
+#tt.selenium.server.port=4444
 
+# Activate failure corridor
 tt.failure.corridor.active=true
 tt.failure.corridor.allowed.failed.tests=2
 
-
+# Set user languages
 user.language=en
 user.country=EN
