Skeleton project also requires a local selenium server now, which is best practice.

--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,19 @@
         <argLine>-Duser.language=${user.language} -Duser.country=${user.country}</argLine>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>testerra</id>
+            <name>Testerra</name>
+            <url>https://dl.bintray.com/testerra-io/Testerra</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>eu.tsystems.mms.tic.testerra</groupId>
             <artifactId>driver-ui-desktop</artifactId>
-            <version>1-SNAPSHOT</version>
+            <version>1.0-RC1</version>
         </dependency>
 
         <dependency>
