--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,11 +1,7 @@
 tt.browser=chrome
 tt.baseurl=https://the-internet.herokuapp.com/
-
-# Set this to remote for remote execution
-tt.webdriver.mode=local
-# Enable this options for remote execution
-#tt.selenium.server.host=localhost
-#tt.selenium.server.port=4444
+tt.selenium.server.host=localhost
+tt.selenium.server.port=4444
 
 # Activate failure corridor
 tt.failure.corridor.active=true
