Fixed available Testerra version and TestNG repository

--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,18 @@
             <name>Testerra</name>
             <url>https://dl.bintray.com/testerra-io/Testerra</url>
         </repository>
+        <repository>
+            <id>testng</id>
+            <name>testng</name>
+            <url>https://dl.bintray.com/cbeust/maven/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>eu.tsystems.mms.tic.testerra</groupId>
             <artifactId>driver-ui-desktop</artifactId>
-            <version>1.0-RC1</version>
+            <version>1.0-RC-2</version>
         </dependency>
 
         <dependency>
