--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <testerra.version>1.0-RC-10</testerra.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Its highly recommended to normalize your project to Unicode -->
@@ -32,7 +33,12 @@
         <dependency>
             <groupId>eu.tsystems.mms.tic.testerra</groupId>
             <artifactId>driver-ui-desktop</artifactId>
-            <version>1.0-RC-2</version>
+            <version>${testerra.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.tsystems.mms.tic.testerra</groupId>
+            <artifactId>report</artifactId>
+            <version>${testerra.version}</version>
         </dependency>
 
         <dependency>
