--- a/layout-check/build.gradle
+++ b/layout-check/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     implementation group: 'eu.tsystems.mms.tic.testerra', name: 'driver-ui-desktop', version: testerraVersion
+    testCompile project(":minimal")
 }
