--- a/minimal/src/test/resources/test.properties
+++ b/minimal/src/test/resources/test.properties
@@ -1,6 +1,9 @@
 # The url to start
 tt.baseurl=http://google.de/
 
+tt.browser.maximize=true
+tt.browser.maximize.position=right
+
 # Selenium environment
 #tt.selenium.server.url=http://[selenium-host]:[port]
 tt.webdriver.mode=local
