--- a/page-objects/src/test/resources/test.properties
+++ b/page-objects/src/test/resources/test.properties
@@ -8,5 +8,5 @@ tt.webdriver.mode=local
 # Type very slow
 tt.user.input.cpm=10
 
-tt.browser=chrome
+tt.browser=chromeHeadless
 tt.display.resolution=1920x1200
