Updated to newest Testerra Version

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,12 @@
         <dependency>
             <groupId>eu.tsystems.mms.tic.testerra</groupId>
             <artifactId>driver-ui-desktop</artifactId>
-            <version>1.0-RC-2</version>
+            <version>1.0-RC-29</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.tsystems.mms.tic.testerra</groupId>
+            <artifactId>report-ng</artifactId>
+            <version>1.0-RC-29</version>
         </dependency>
 
         <dependency>
