--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -10,3 +10,6 @@ tt.failure.corridor.allowed.failed.tests=2
 # Set user languages
 user.language=en
 user.country=EN
+
+tt.webdriver.mode=local
+webdriver.chrome.driver="C:\Users\mkri\IdeaProjects\testerra1-skeleton\bin\chromdriver-83.exe"
