--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .idea/
 target/
 build/
-testerra-report/
+test-report/
+gradle
 
 # if you remove the above rule, at least ignore user-specific stuff:
 # .idea/workspace.xml
