--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,16 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = "UTF-8"
 
 repositories {
-    maven {
-        url  "https://dl.bintray.com/testerra-io/Testerra"
-    }
+//    maven {
+//        url  "https://dl.bintray.com/testerra-io/Testerra"
+//    }
     jcenter()
     //mavenLocal()
 }
 
 dependencies {
-    implementation 'eu.tsystems.mms.tic.testerra:driver-ui-desktop:1.0-RC-3'
+    implementation 'eu.tsystems.mms.tic.testerra:driver-ui-desktop:1.0-RC-29'
+    implementation 'eu.tsystems.mms.tic.testerra:report-ng:1.0-RC-29'
 }
 
 test {
