--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,4 @@ include "page-objects"
 include "inject-factories"
 include "layout-check"
 // Add this for local development
-includeBuild "../testerra"
+//includeBuild "../testerra"
