Improved skeleton projects

--- a/minimal/src/test/resources/test.properties
+++ b/minimal/src/test/resources/test.properties
@@ -2,7 +2,7 @@
 tt.baseurl=http://google.de/
 
 tt.browser.maximize=true
-tt.browser.maximize.position=right
+tt.demomode=true
 
 # Selenium environment
 #tt.selenium.server.url=http://[selenium-host]:[port]
