--- a/page-objects/src/test/resources/test.properties
+++ b/page-objects/src/test/resources/test.properties
@@ -1,12 +1,11 @@
 # The url to start
 tt.baseurl=http://google.de/
 
+tt.browser.maximize=true
+tt.demomode=true
+
 # Selenium environment
 #tt.selenium.server.url=http://[selenium-host]:[port]
 tt.webdriver.mode=local
 
-# Type very slow
-tt.user.input.cpm=10
-
 tt.browser=chrome
-tt.display.resolution=1920x1200
