--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,7 @@ include "minimal"
 include "page-objects"
 include "inject-factories"
 include "layout-check"
+include 'the-internet'
+
 // Add this for local development
-//includeBuild "../testerra"
+includeBuild "../testerra"
