--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = "UTF-8"
 
 dependencies {
-    implementation 'eu.tsystems.mms.tic.testerra:driver-ui-desktop:1.0-RC-29'
-    implementation 'eu.tsystems.mms.tic.testerra:report-ng:1.0-RC-29'
+    implementation 'io.testerra:driver-ui-desktop:1.0-RC-32'
+    implementation 'io.testerra:report-ng:1.0-RC-32'
 }
 
 test {
