--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <testerra.version>1.0-RC-29</testerra.version>
+        <testerra.version>1.0-RC-32</testerra.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Its highly recommended to normalize your project to Unicode -->
@@ -21,22 +21,14 @@
         <argLine>-Duser.language=${user.language} -Duser.country=${user.country}</argLine>
     </properties>
 
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>testerra</id>-->
-<!--            <name>Testerra</name>-->
-<!--            <url>https://dl.bintray.com/testerra-io/Testerra</url>-->
-<!--        </repository>-->
-<!--    </repositories>-->
-
     <dependencies>
         <dependency>
-            <groupId>eu.tsystems.mms.tic.testerra</groupId>
+            <groupId>io.testerra</groupId>
             <artifactId>driver-ui-desktop</artifactId>
             <version>${testerra.version}</version>
         </dependency>
         <dependency>
-            <groupId>eu.tsystems.mms.tic.testerra</groupId>
+            <groupId>io.testerra</groupId>
             <artifactId>report-ng</artifactId>
             <version>${testerra.version}</version>
         </dependency>
