Activated browser parameter in test.properties

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,4 +1,4 @@
-#tt.browser=chrome
+tt.browser=chrome
 tt.baseurl=https://the-internet.herokuapp.com/
 tt.selenium.server.host=localhost
 tt.selenium.server.port=4444
