--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <testerra.version>1.0-RC-32</testerra.version>
+        <testerra.version>1.0-RC-34</testerra.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Its highly recommended to normalize your project to Unicode -->
@@ -24,6 +24,11 @@
     <dependencies>
         <dependency>
             <groupId>io.testerra</groupId>
+            <artifactId>driver-ui</artifactId>
+            <version>${testerra.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.testerra</groupId>
             <artifactId>driver-ui-desktop</artifactId>
             <version>${testerra.version}</version>
         </dependency>
@@ -31,6 +36,11 @@
             <groupId>io.testerra</groupId>
             <artifactId>report-ng</artifactId>
             <version>${testerra.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.testerra</groupId>
+            <artifactId>selenoid-connector</artifactId>
+            <version>1.0-RC-14</version>
         </dependency>
 
         <dependency>
