--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -3,6 +3,8 @@ tt.baseurl=https://the-internet.herokuapp.com/
 tt.selenium.server.host=localhost
 tt.selenium.server.port=4444
 
+tt.webdriver.mode=remote
+
 # Activate failure corridor
 tt.failure.corridor.active=true
 tt.failure.corridor.allowed.failed.tests=2
