--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,6 +12,11 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+        with:
+          repository: ${{ github.repository }}
+          
       - name: Build Changelog
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v1
