--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = "UTF-8"
 
 ext {
-    testerraVersion = '1.9'
+    testerraVersion = '1.10'
 }
 
 dependencies {
