--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 ext {
-    testerraVersion = '2.0-RC-19'
+    testerraVersion = '2.0-RC-21'
 }
 
 subprojects {
 
-    apply plugin: 'java'
+    apply plugin: 'java-library'
 
     group 'io.testerra.skeletons'
     version '2-SNAPSHOT'
