--- a/the-internet/src/test/resources/test.properties
+++ b/the-internet/src/test/resources/test.properties
@@ -1,5 +1,8 @@
-tt.browser=chrome
+#tt.browser=chrome
+tt.browser.setting=chrome:95
 tt.baseurl=https://the-internet.herokuapp.com/
+
+tt.selenium.server.host=localhost
 
 # Activate failure corridor
 tt.failure.corridor.active=true
@@ -8,3 +11,5 @@ tt.failure.corridor.allowed.failed.tests=2
 # Set user languages
 user.language=en
 user.country=EN
+
+tt.screencaster.active=true
