Updated Testerra 2 Skeleton projects

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ subprojects {
     }
 
     test {
+
+        useTestNG() {}
+
         testLogging {
             outputs.upToDateWhen { false }
             showStandardStreams = true
