--- a/minimal/src/test/resources/test.properties
+++ b/minimal/src/test/resources/test.properties
@@ -6,5 +6,5 @@ tt.demomode=true
 
 # Selenium environment
 #tt.selenium.server.url=http://[selenium-host]:[port]
-
+tt.selenium.server.host=localhost
 tt.browser=chrome
