--- a/page-objects/src/test/resources/test.properties
+++ b/page-objects/src/test/resources/test.properties
@@ -6,5 +6,6 @@ tt.demomode=true
 
 # Selenium environment
 #tt.selenium.server.url=http://[selenium-host]:[port]
+tt.selenium.server.host=localhost
 
 tt.browser=chrome
