Updated Testerra version

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 ext {
-    testerraVersion = '2.1'
+    testerraVersion = '2.2'
 }
 
 apply plugin: 'java-library'
@@ -20,6 +20,9 @@ repositories {
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = "UTF-8"
+
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 dependencies {
     implementation "io.testerra:driver-ui-desktop:${testerraVersion}"
