Updated Testerra version

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,5 +1,5 @@
-#tt.browser=chrome
-tt.browser.setting=chrome:95
+tt.browser=chrome
+#tt.browser.setting=chrome:95
 tt.baseurl=https://the-internet.herokuapp.com/
 
 tt.selenium.server.host=localhost
