Minor improvements in test.properties

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,12 +1,11 @@
-tt.browser=chrome
-#tt.browser.setting=chrome:95
+# Selenium Manager downloads required chromedriver (and Chrome4Testing if a version is needed)
+#tt.browser.setting=chrome
+tt.browser.setting=chrome:125
+
 tt.baseurl=https://the-internet.herokuapp.com/
 
-tt.selenium.server.host=localhost
-
-# Activate failure corridor
-tt.failure.corridor.active=true
-tt.failure.corridor.allowed.failed.tests=2
+# Only uncomment this line if you already have a running Selenium server
+#tt.selenium.server.host=localhost
 
 # Set user languages
 user.language=en
