Update Testerra version

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,6 +1,6 @@
 # Selenium Manager downloads required chromedriver (and Chrome4Testing if a version is needed)
-#tt.browser.setting=chrome
-tt.browser.setting=chrome:125
+tt.browser.setting=chrome
+#tt.browser.setting=chrome:140
 
 tt.baseurl=https://the-internet.herokuapp.com/
 
