--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ ext {
 repositories {
     mavenCentral()
 
-    // Uncomment it for Testerra SNAPSHOTS
+    // Uncomment for using Testerra SNAPSHOTS
 //    maven {
 
 //        url "https://central.sonatype.com/repository/maven-snapshots/"
